# CLucid

./: .clang-format  .gitattributes  .gitignore  .gitignore.txt  CMakeLists.txt  README.md
example/Generators/: CMakeLists.txt
example/Generators/cmake/: Generators.cmake
example/Generators/include/: Actor.h  ActorBase.h  GeneratorBase.h  Item1.h  ReflectSystem.h
example/Generators/include/generators/: SerializeGenerator.h
example/Generators/include/test/: AActor.generated.h  AActor.h  AActor2.generated.h  AActor2.h  Maco.h  MiniCore.h
example/Generators/source/: Actor.cpp  Actor1.cpp  GeneratorBase.cpp  ReflectSystem.cpp  main.cpp
example/Generators/source/generators/: SerializeGenerator.cpp
example/Generators/source/test/: AActor.cpp  AActor.generated.cpp  AActor2.cpp  AActor2.generated.cpp
example/TestProject/: CMakeLists.txt  Clazz.cpp  Clazz.h
example/TestProject/Generators/templates/: serialize.template
example/TestProject/include/: Actor.h  ActorBase.h
example/TestProject/source/: Actor.cpp
example/demo/: CMakeLists.txt  main.cpp
include/: CLucidDefines.h
include/structure/: FunctionNode.h  NodeBase.h  PropertyNode.h
include/support/: Helper.h
source/: CLucidAst.cpp  CLucidParser.cpp  main.cpp
source/matcher/: AnnotationMatcher.cpp
source/structure/: ClassNode.cpp  ConstructorNode.cpp  DeconstructorNode.cpp  EnumNode.cpp  FunctionNode.cpp  MethodNode.cpp  NodeBase.cpp  ParamNode.cpp  PropertyNode.cpp
source/support/: Helper.cpp  Log.cpp
